crates/client/tests/snapshots/canvas_render__four_node_canvas_panned.snap
---
source: crates/client/tests/canvas_render.rs
assertion_line: 130
expression: terminal.backend().to_string()
---
" canvas ────────────────────────────────────────────────────────────────────────"
" 4 nodes, 3 edges                                                               "
"────────────────────────────────────────────────────────────────────────────────"
" Client (TUI) ──────                                                            "
"────────────────────                                                            "
"                                                                                "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│Server (Axum) ─────                                                            "
"│───────────────────                                                            "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│                                                                               "
"│Engine (Rig) ──── OpenCode Go ───────                                          "
"│─────────────────────────────────────                                          "
"│                                                                               "
"──────────────────▶                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"esc return · ↑↓←→ move · drag/scroll pan · selected: engine                     "
